# prometheus-mcp-server

./: Dockerfile  README.md  publish.sh  pyproject.toml  server.yaml
.github/: TRIAGE_AUTOMATION.md  VALIDATION_SUMMARY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: bug-triage.yml  issue-management.yml  label-management.yml  security.yml  triage-metrics.yml
docs/: api_reference.md  docker_deployment.md  usage.md
src/prometheus_mcp_server/: main.py  server.py
tests/: test_docker_integration.py  test_mcp_protocol_compliance.py  test_tools.py  test_validate_limit_parameter.py
